# tribhasha

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.sh  compiler_pipeline.md  repl_highlight_commands.sh  run_demo.sh  run_showcase.sh  syntax_highlighting_demo.txt  tribhasha_repl_code.md
docs/: LANGUAGE.md
examples/: CMakeLists.txt  calculator.tri  factorial.tri  language_showcase.tri
include/tribhasha/: AST.h  CodeGen.h  JIT.h  Lexer.h  Parser.h  REPL.h  Token.h
src/: main.cpp
src/codegen/: CodeGen.cpp
src/jit/: JIT.cpp
src/lexer/: Lexer.cpp
src/parser/: Parser.cpp
src/repl/: REPL.cpp
tests/: CMakeLists.txt  LexerTests.cpp  ParserTests.cpp  TestMain.cpp
